--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,6 +20,9 @@ jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
     steps:
+      - name: Debug
+        run: |
+          echo ${{ github.head_ref }}
       # https://github.com/actions/github-script
       # 참고 - output 설정: https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#example-of-setting-an-output-parameter
       # 참고 - default env 변수 목록: https://docs.github.com/en/actions/learn-github-actions/variables#default-environment-variables
@@ -48,6 +51,8 @@ jobs:
         run: |
           vercel build ${{ steps.env.outputs.option }} --token=${{ secrets.VERCEL_TOKEN }}
 
+      # exposed variables: https://vercel.com/docs/deployments/git/vercel-for-github#configuring-for-github
+      # options: https://vercel.com/docs/cli/deploy#build-env
       - name: Deploy Project Artifacts to Vercel
         run: |
-          vercel deploy --prebuilt ${{ steps.env.outputs.option }} --token=${{ secrets.VERCEL_TOKEN }}
+          vercel deploy --build-env VERCEL_GIT_COMMIT_REF=${{ github.head_ref }} --prebuilt ${{ steps.env.outputs.option }} --token=${{ secrets.VERCEL_TOKEN }}
