Add manage routine page (#7)
- 루틴 추가, 편집 페이지 생성
- 드랍다운 아이템 컴포넌트 목적에 맞게 구분
- 폼 입력 요소 상태(Ref, 입력값, 유효성 검사 결과)를 저장하는 hook 생성
- tailwind `@layer`를 사용한 스타일 커스터마이징

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.26.4",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "clsx": "^2.0.0",
@@ -18,6 +19,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.11",
