--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@floating-ui/react": "^0.26.4",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
+    "@tanstack/react-query": "^5.17.19",
+    "@tanstack/react-query-devtools": "^5.17.21",
     "clsx": "^2.0.0",
     "next": "14.0.4",
     "react": "^18",
