--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lodash": "^4.17.21",
     "next": "^14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
